trim examples + move tibble to imports + import supplementation generics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,8 @@ export(recover_conference)
 export(recover_coord)
 export(recover_inertia)
 export(recover_rows)
+export(supplementation_cols)
+export(supplementation_rows)
 importFrom(logisticPCA,convexLogisticPCA)
 importFrom(logisticPCA,logisticPCA)
 importFrom(logisticPCA,logisticSVD)
@@ -82,6 +84,8 @@ importFrom(ordr,recover_conference)
 importFrom(ordr,recover_coord)
 importFrom(ordr,recover_inertia)
 importFrom(ordr,recover_rows)
+importFrom(ordr,supplementation_cols)
+importFrom(ordr,supplementation_rows)
 importFrom(stats,plogis)
 importFrom(tibble,as_tibble)
 importFrom(tibble,is_tibble)
