--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,18 +15,18 @@ Depends:
 Imports:
     scales,
     tibble,
-    dplyr,
+    dplyr
+Suggests:
     logisticPCA,
     PMA,
     ade4,
-    nipals
-License: GPL-3
-Encoding: UTF-8
-LazyData: true
-Suggests:
+    nipals,
     testthat (>= 3.0.0),
     cooccur,
     knitr
+License: GPL-3
+Encoding: UTF-8
+LazyData: true
 RoxygenNote: 7.2.0
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
