--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(as_tbl_ord,CCA)
 S3method(as_tbl_ord,SPC)
+S3method(as_tbl_ord,cancor)
 S3method(as_tbl_ord,clpca)
 S3method(as_tbl_ord,lpca)
 S3method(as_tbl_ord,lsvd)
@@ -9,6 +10,7 @@ S3method(as_tbl_ord,nipals)
 S3method(as_tbl_ord,nipals_ord)
 S3method(augmentation_cols,CCA)
 S3method(augmentation_cols,SPC)
+S3method(augmentation_cols,cancor)
 S3method(augmentation_cols,clpca)
 S3method(augmentation_cols,lpca)
 S3method(augmentation_cols,lsvd)
@@ -16,6 +18,7 @@ S3method(augmentation_cols,nipals)
 S3method(augmentation_cols,nipals_ord)
 S3method(augmentation_coord,CCA)
 S3method(augmentation_coord,SPC)
+S3method(augmentation_coord,cancor)
 S3method(augmentation_coord,clpca)
 S3method(augmentation_coord,lpca)
 S3method(augmentation_coord,lsvd)
@@ -23,6 +26,7 @@ S3method(augmentation_coord,nipals)
 S3method(augmentation_coord,nipals_ord)
 S3method(augmentation_rows,CCA)
 S3method(augmentation_rows,SPC)
+S3method(augmentation_rows,cancor)
 S3method(augmentation_rows,clpca)
 S3method(augmentation_rows,lpca)
 S3method(augmentation_rows,lsvd)
@@ -30,6 +34,7 @@ S3method(augmentation_rows,nipals)
 S3method(augmentation_rows,nipals_ord)
 S3method(recover_cols,CCA)
 S3method(recover_cols,SPC)
+S3method(recover_cols,cancor)
 S3method(recover_cols,clpca)
 S3method(recover_cols,lpca)
 S3method(recover_cols,lsvd)
@@ -37,10 +42,12 @@ S3method(recover_cols,nipals)
 S3method(recover_cols,nipals_ord)
 S3method(recover_conference,CCA)
 S3method(recover_conference,SPC)
+S3method(recover_conference,cancor)
 S3method(recover_conference,nipals)
 S3method(recover_conference,nipals_ord)
 S3method(recover_coord,CCA)
 S3method(recover_coord,SPC)
+S3method(recover_coord,cancor)
 S3method(recover_coord,clpca)
 S3method(recover_coord,lpca)
 S3method(recover_coord,lsvd)
@@ -48,15 +55,19 @@ S3method(recover_coord,nipals)
 S3method(recover_coord,nipals_ord)
 S3method(recover_inertia,CCA)
 S3method(recover_inertia,SPC)
+S3method(recover_inertia,cancor)
 S3method(recover_inertia,nipals)
 S3method(recover_inertia,nipals_ord)
 S3method(recover_rows,CCA)
 S3method(recover_rows,SPC)
+S3method(recover_rows,cancor)
 S3method(recover_rows,clpca)
 S3method(recover_rows,lpca)
 S3method(recover_rows,lsvd)
 S3method(recover_rows,nipals)
 S3method(recover_rows,nipals_ord)
+S3method(supplementation_cols,cancor)
+S3method(supplementation_rows,cancor)
 export(as_tbl_ord)
 export(augmentation_cols)
 export(augmentation_coord)
@@ -70,6 +81,8 @@ export(recover_conference)
 export(recover_coord)
 export(recover_inertia)
 export(recover_rows)
+export(supplementation_cols)
+export(supplementation_rows)
 importFrom(logisticPCA,convexLogisticPCA)
 importFrom(logisticPCA,logisticPCA)
 importFrom(logisticPCA,logisticSVD)
@@ -82,6 +95,8 @@ importFrom(ordr,recover_conference)
 importFrom(ordr,recover_coord)
 importFrom(ordr,recover_inertia)
 importFrom(ordr,recover_rows)
+importFrom(ordr,supplementation_cols)
+importFrom(ordr,supplementation_rows)
 importFrom(stats,plogis)
 importFrom(tibble,as_tibble)
 importFrom(tibble,is_tibble)
