--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(as_tbl_ord,CCA)
 S3method(as_tbl_ord,SPC)
+S3method(as_tbl_ord,ca)
 S3method(as_tbl_ord,cancor)
 S3method(as_tbl_ord,clpca)
 S3method(as_tbl_ord,lpca)
@@ -10,6 +11,7 @@ S3method(as_tbl_ord,nipals)
 S3method(as_tbl_ord,nipals_ord)
 S3method(augmentation_cols,CCA)
 S3method(augmentation_cols,SPC)
+S3method(augmentation_cols,ca)
 S3method(augmentation_cols,cancor)
 S3method(augmentation_cols,clpca)
 S3method(augmentation_cols,lpca)
@@ -18,6 +20,7 @@ S3method(augmentation_cols,nipals)
 S3method(augmentation_cols,nipals_ord)
 S3method(augmentation_coord,CCA)
 S3method(augmentation_coord,SPC)
+S3method(augmentation_coord,ca)
 S3method(augmentation_coord,cancor)
 S3method(augmentation_coord,clpca)
 S3method(augmentation_coord,lpca)
@@ -26,6 +29,7 @@ S3method(augmentation_coord,nipals)
 S3method(augmentation_coord,nipals_ord)
 S3method(augmentation_rows,CCA)
 S3method(augmentation_rows,SPC)
+S3method(augmentation_rows,ca)
 S3method(augmentation_rows,cancor)
 S3method(augmentation_rows,clpca)
 S3method(augmentation_rows,lpca)
@@ -34,6 +38,7 @@ S3method(augmentation_rows,nipals)
 S3method(augmentation_rows,nipals_ord)
 S3method(recover_cols,CCA)
 S3method(recover_cols,SPC)
+S3method(recover_cols,ca)
 S3method(recover_cols,cancor)
 S3method(recover_cols,clpca)
 S3method(recover_cols,lpca)
@@ -42,11 +47,13 @@ S3method(recover_cols,nipals)
 S3method(recover_cols,nipals_ord)
 S3method(recover_conference,CCA)
 S3method(recover_conference,SPC)
+S3method(recover_conference,ca)
 S3method(recover_conference,cancor)
 S3method(recover_conference,nipals)
 S3method(recover_conference,nipals_ord)
 S3method(recover_coord,CCA)
 S3method(recover_coord,SPC)
+S3method(recover_coord,ca)
 S3method(recover_coord,cancor)
 S3method(recover_coord,clpca)
 S3method(recover_coord,lpca)
@@ -55,11 +62,13 @@ S3method(recover_coord,nipals)
 S3method(recover_coord,nipals_ord)
 S3method(recover_inertia,CCA)
 S3method(recover_inertia,SPC)
+S3method(recover_inertia,ca)
 S3method(recover_inertia,cancor)
 S3method(recover_inertia,nipals)
 S3method(recover_inertia,nipals_ord)
 S3method(recover_rows,CCA)
 S3method(recover_rows,SPC)
+S3method(recover_rows,ca)
 S3method(recover_rows,cancor)
 S3method(recover_rows,clpca)
 S3method(recover_rows,lpca)
