--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(as_tbl_ord,cancor)
 S3method(as_tbl_ord,clpca)
 S3method(as_tbl_ord,lpca)
 S3method(as_tbl_ord,lsvd)
+S3method(as_tbl_ord,mjca)
 S3method(as_tbl_ord,nipals)
 S3method(as_tbl_ord,nipals_ord)
 S3method(augmentation_cols,CCA)
@@ -16,6 +17,7 @@ S3method(augmentation_cols,cancor)
 S3method(augmentation_cols,clpca)
 S3method(augmentation_cols,lpca)
 S3method(augmentation_cols,lsvd)
+S3method(augmentation_cols,mjca)
 S3method(augmentation_cols,nipals)
 S3method(augmentation_cols,nipals_ord)
 S3method(augmentation_coord,CCA)
@@ -25,6 +27,7 @@ S3method(augmentation_coord,cancor)
 S3method(augmentation_coord,clpca)
 S3method(augmentation_coord,lpca)
 S3method(augmentation_coord,lsvd)
+S3method(augmentation_coord,mjca)
 S3method(augmentation_coord,nipals)
 S3method(augmentation_coord,nipals_ord)
 S3method(augmentation_rows,CCA)
@@ -34,6 +37,7 @@ S3method(augmentation_rows,cancor)
 S3method(augmentation_rows,clpca)
 S3method(augmentation_rows,lpca)
 S3method(augmentation_rows,lsvd)
+S3method(augmentation_rows,mjca)
 S3method(augmentation_rows,nipals)
 S3method(augmentation_rows,nipals_ord)
 S3method(recover_cols,CCA)
@@ -43,12 +47,14 @@ S3method(recover_cols,cancor)
 S3method(recover_cols,clpca)
 S3method(recover_cols,lpca)
 S3method(recover_cols,lsvd)
+S3method(recover_cols,mjca)
 S3method(recover_cols,nipals)
 S3method(recover_cols,nipals_ord)
 S3method(recover_conference,CCA)
 S3method(recover_conference,SPC)
 S3method(recover_conference,ca)
 S3method(recover_conference,cancor)
+S3method(recover_conference,mjca)
 S3method(recover_conference,nipals)
 S3method(recover_conference,nipals_ord)
 S3method(recover_coord,CCA)
@@ -58,12 +64,14 @@ S3method(recover_coord,cancor)
 S3method(recover_coord,clpca)
 S3method(recover_coord,lpca)
 S3method(recover_coord,lsvd)
+S3method(recover_coord,mjca)
 S3method(recover_coord,nipals)
 S3method(recover_coord,nipals_ord)
 S3method(recover_inertia,CCA)
 S3method(recover_inertia,SPC)
 S3method(recover_inertia,ca)
 S3method(recover_inertia,cancor)
+S3method(recover_inertia,mjca)
 S3method(recover_inertia,nipals)
 S3method(recover_inertia,nipals_ord)
 S3method(recover_rows,CCA)
@@ -73,6 +81,7 @@ S3method(recover_rows,cancor)
 S3method(recover_rows,clpca)
 S3method(recover_rows,lpca)
 S3method(recover_rows,lsvd)
+S3method(recover_rows,mjca)
 S3method(recover_rows,nipals)
 S3method(recover_rows,nipals_ord)
 S3method(supplementation_cols,cancor)
