change supplementation_* to recover_supp_*

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,8 +84,8 @@ S3method(recover_rows,lsvd)
 S3method(recover_rows,mjca)
 S3method(recover_rows,nipals)
 S3method(recover_rows,nipals_ord)
-S3method(supplementation_cols,cancor)
-S3method(supplementation_rows,cancor)
+S3method(recover_supp_cols,cancor)
+S3method(recover_supp_rows,cancor)
 export(as_tbl_ord)
 export(augmentation_cols)
 export(augmentation_coord)
@@ -99,8 +99,8 @@ export(recover_conference)
 export(recover_coord)
 export(recover_inertia)
 export(recover_rows)
-export(supplementation_cols)
-export(supplementation_rows)
+export(recover_supp_cols)
+export(recover_supp_rows)
 importFrom(ordr,as_tbl_ord)
 importFrom(ordr,augmentation_cols)
 importFrom(ordr,augmentation_coord)
@@ -110,8 +110,8 @@ importFrom(ordr,recover_conference)
 importFrom(ordr,recover_coord)
 importFrom(ordr,recover_inertia)
 importFrom(ordr,recover_rows)
-importFrom(ordr,supplementation_cols)
-importFrom(ordr,supplementation_rows)
+importFrom(ordr,recover_supp_cols)
+importFrom(ordr,recover_supp_rows)
 importFrom(stats,plogis)
 importFrom(tibble,as_tibble)
 importFrom(tibble,is_tibble)
