--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,10 @@ Collate:
     'methods-ade4-nipals.r'
     'methods-ca-ca.r'
     'methods-ca-mjca.r'
-    'methods-candisc.r'
+    'methods-candisc-cancor.r'
+    'methods-logisticpca-lsvd.r'
     'methods-logisticpca-lpca.r'
+    'methods-logisticpca-clpca.r'
     'methods-nipals-nipals.r'
     'methods-pma-cca.r'
+    'methods-pma-spc.r'
