rename methods augmentation_* to recover_aug_*

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,36 +10,36 @@ S3method(as_tbl_ord,lsvd)
 S3method(as_tbl_ord,mjca)
 S3method(as_tbl_ord,nipals)
 S3method(as_tbl_ord,nipals_ord)
-S3method(augmentation_cols,CCA)
-S3method(augmentation_cols,SPC)
-S3method(augmentation_cols,ca)
-S3method(augmentation_cols,cancor)
-S3method(augmentation_cols,clpca)
-S3method(augmentation_cols,lpca)
-S3method(augmentation_cols,lsvd)
-S3method(augmentation_cols,mjca)
-S3method(augmentation_cols,nipals)
-S3method(augmentation_cols,nipals_ord)
-S3method(augmentation_coord,CCA)
-S3method(augmentation_coord,SPC)
-S3method(augmentation_coord,ca)
-S3method(augmentation_coord,cancor)
-S3method(augmentation_coord,clpca)
-S3method(augmentation_coord,lpca)
-S3method(augmentation_coord,lsvd)
-S3method(augmentation_coord,mjca)
-S3method(augmentation_coord,nipals)
-S3method(augmentation_coord,nipals_ord)
-S3method(augmentation_rows,CCA)
-S3method(augmentation_rows,SPC)
-S3method(augmentation_rows,ca)
-S3method(augmentation_rows,cancor)
-S3method(augmentation_rows,clpca)
-S3method(augmentation_rows,lpca)
-S3method(augmentation_rows,lsvd)
-S3method(augmentation_rows,mjca)
-S3method(augmentation_rows,nipals)
-S3method(augmentation_rows,nipals_ord)
+S3method(recover_aug_cols,CCA)
+S3method(recover_aug_cols,SPC)
+S3method(recover_aug_cols,ca)
+S3method(recover_aug_cols,cancor)
+S3method(recover_aug_cols,clpca)
+S3method(recover_aug_cols,lpca)
+S3method(recover_aug_cols,lsvd)
+S3method(recover_aug_cols,mjca)
+S3method(recover_aug_cols,nipals)
+S3method(recover_aug_cols,nipals_ord)
+S3method(recover_aug_coord,CCA)
+S3method(recover_aug_coord,SPC)
+S3method(recover_aug_coord,ca)
+S3method(recover_aug_coord,cancor)
+S3method(recover_aug_coord,clpca)
+S3method(recover_aug_coord,lpca)
+S3method(recover_aug_coord,lsvd)
+S3method(recover_aug_coord,mjca)
+S3method(recover_aug_coord,nipals)
+S3method(recover_aug_coord,nipals_ord)
+S3method(recover_aug_rows,CCA)
+S3method(recover_aug_rows,SPC)
+S3method(recover_aug_rows,ca)
+S3method(recover_aug_rows,cancor)
+S3method(recover_aug_rows,clpca)
+S3method(recover_aug_rows,lpca)
+S3method(recover_aug_rows,lsvd)
+S3method(recover_aug_rows,mjca)
+S3method(recover_aug_rows,nipals)
+S3method(recover_aug_rows,nipals_ord)
 S3method(recover_cols,CCA)
 S3method(recover_cols,SPC)
 S3method(recover_cols,ca)
@@ -87,13 +87,13 @@ S3method(recover_rows,nipals_ord)
 S3method(recover_supp_cols,cancor)
 S3method(recover_supp_rows,cancor)
 export(as_tbl_ord)
-export(augmentation_cols)
-export(augmentation_coord)
-export(augmentation_rows)
 export(convexLogisticPCA_ord)
 export(logisticPCA_ord)
 export(logisticSVD_ord)
 export(nipals_ord)
+export(recover_aug_cols)
+export(recover_aug_coord)
+export(recover_aug_rows)
 export(recover_cols)
 export(recover_conference)
 export(recover_coord)
@@ -102,9 +102,9 @@ export(recover_rows)
 export(recover_supp_cols)
 export(recover_supp_rows)
 importFrom(ordr,as_tbl_ord)
-importFrom(ordr,augmentation_cols)
-importFrom(ordr,augmentation_coord)
-importFrom(ordr,augmentation_rows)
+importFrom(ordr,recover_aug_cols)
+importFrom(ordr,recover_aug_coord)
+importFrom(ordr,recover_aug_rows)
 importFrom(ordr,recover_cols)
 importFrom(ordr,recover_conference)
 importFrom(ordr,recover_coord)
