--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(as_tbl_ord,SPC)
 S3method(as_tbl_ord,ca)
 S3method(as_tbl_ord,cancor)
 S3method(as_tbl_ord,clpca)
+S3method(as_tbl_ord,empca_ord)
 S3method(as_tbl_ord,lpca)
 S3method(as_tbl_ord,lsvd)
 S3method(as_tbl_ord,mjca)
@@ -15,6 +16,7 @@ S3method(recover_aug_cols,SPC)
 S3method(recover_aug_cols,ca)
 S3method(recover_aug_cols,cancor)
 S3method(recover_aug_cols,clpca)
+S3method(recover_aug_cols,empca_ord)
 S3method(recover_aug_cols,lpca)
 S3method(recover_aug_cols,lsvd)
 S3method(recover_aug_cols,mjca)
@@ -25,6 +27,7 @@ S3method(recover_aug_coord,SPC)
 S3method(recover_aug_coord,ca)
 S3method(recover_aug_coord,cancor)
 S3method(recover_aug_coord,clpca)
+S3method(recover_aug_coord,empca_ord)
 S3method(recover_aug_coord,lpca)
 S3method(recover_aug_coord,lsvd)
 S3method(recover_aug_coord,mjca)
@@ -35,6 +38,7 @@ S3method(recover_aug_rows,SPC)
 S3method(recover_aug_rows,ca)
 S3method(recover_aug_rows,cancor)
 S3method(recover_aug_rows,clpca)
+S3method(recover_aug_rows,empca_ord)
 S3method(recover_aug_rows,lpca)
 S3method(recover_aug_rows,lsvd)
 S3method(recover_aug_rows,mjca)
@@ -45,6 +49,7 @@ S3method(recover_cols,SPC)
 S3method(recover_cols,ca)
 S3method(recover_cols,cancor)
 S3method(recover_cols,clpca)
+S3method(recover_cols,empca_ord)
 S3method(recover_cols,lpca)
 S3method(recover_cols,lsvd)
 S3method(recover_cols,mjca)
@@ -54,6 +59,7 @@ S3method(recover_conference,CCA)
 S3method(recover_conference,SPC)
 S3method(recover_conference,ca)
 S3method(recover_conference,cancor)
+S3method(recover_conference,empca_ord)
 S3method(recover_conference,mjca)
 S3method(recover_conference,nipals)
 S3method(recover_conference,nipals_ord)
@@ -62,6 +68,7 @@ S3method(recover_coord,SPC)
 S3method(recover_coord,ca)
 S3method(recover_coord,cancor)
 S3method(recover_coord,clpca)
+S3method(recover_coord,empca_ord)
 S3method(recover_coord,lpca)
 S3method(recover_coord,lsvd)
 S3method(recover_coord,mjca)
@@ -71,6 +78,7 @@ S3method(recover_inertia,CCA)
 S3method(recover_inertia,SPC)
 S3method(recover_inertia,ca)
 S3method(recover_inertia,cancor)
+S3method(recover_inertia,empca_ord)
 S3method(recover_inertia,mjca)
 S3method(recover_inertia,nipals)
 S3method(recover_inertia,nipals_ord)
@@ -79,6 +87,7 @@ S3method(recover_rows,SPC)
 S3method(recover_rows,ca)
 S3method(recover_rows,cancor)
 S3method(recover_rows,clpca)
+S3method(recover_rows,empca_ord)
 S3method(recover_rows,lpca)
 S3method(recover_rows,lsvd)
 S3method(recover_rows,mjca)
@@ -88,6 +97,7 @@ S3method(recover_supp_cols,cancor)
 S3method(recover_supp_rows,cancor)
 export(as_tbl_ord)
 export(convexLogisticPCA_ord)
+export(empca_ord)
 export(logisticPCA_ord)
 export(logisticSVD_ord)
 export(nipals_ord)
