--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(as_tbl_ord,CCA)
 S3method(as_tbl_ord,SPC)
 S3method(as_tbl_ord,ca)
 S3method(as_tbl_ord,cancor)
+S3method(as_tbl_ord,candisc)
 S3method(as_tbl_ord,clpca)
 S3method(as_tbl_ord,empca_ord)
 S3method(as_tbl_ord,lpca)
@@ -15,6 +16,7 @@ S3method(recover_aug_cols,CCA)
 S3method(recover_aug_cols,SPC)
 S3method(recover_aug_cols,ca)
 S3method(recover_aug_cols,cancor)
+S3method(recover_aug_cols,candisc)
 S3method(recover_aug_cols,clpca)
 S3method(recover_aug_cols,empca_ord)
 S3method(recover_aug_cols,lpca)
@@ -26,6 +28,7 @@ S3method(recover_aug_coord,CCA)
 S3method(recover_aug_coord,SPC)
 S3method(recover_aug_coord,ca)
 S3method(recover_aug_coord,cancor)
+S3method(recover_aug_coord,candisc)
 S3method(recover_aug_coord,clpca)
 S3method(recover_aug_coord,empca_ord)
 S3method(recover_aug_coord,lpca)
@@ -37,6 +40,7 @@ S3method(recover_aug_rows,CCA)
 S3method(recover_aug_rows,SPC)
 S3method(recover_aug_rows,ca)
 S3method(recover_aug_rows,cancor)
+S3method(recover_aug_rows,candisc)
 S3method(recover_aug_rows,clpca)
 S3method(recover_aug_rows,empca_ord)
 S3method(recover_aug_rows,lpca)
@@ -48,6 +52,7 @@ S3method(recover_cols,CCA)
 S3method(recover_cols,SPC)
 S3method(recover_cols,ca)
 S3method(recover_cols,cancor)
+S3method(recover_cols,candisc)
 S3method(recover_cols,clpca)
 S3method(recover_cols,empca_ord)
 S3method(recover_cols,lpca)
@@ -59,6 +64,7 @@ S3method(recover_conference,CCA)
 S3method(recover_conference,SPC)
 S3method(recover_conference,ca)
 S3method(recover_conference,cancor)
+S3method(recover_conference,candisc)
 S3method(recover_conference,empca_ord)
 S3method(recover_conference,mjca)
 S3method(recover_conference,nipals)
@@ -67,6 +73,7 @@ S3method(recover_coord,CCA)
 S3method(recover_coord,SPC)
 S3method(recover_coord,ca)
 S3method(recover_coord,cancor)
+S3method(recover_coord,candisc)
 S3method(recover_coord,clpca)
 S3method(recover_coord,empca_ord)
 S3method(recover_coord,lpca)
@@ -78,6 +85,7 @@ S3method(recover_inertia,CCA)
 S3method(recover_inertia,SPC)
 S3method(recover_inertia,ca)
 S3method(recover_inertia,cancor)
+S3method(recover_inertia,candisc)
 S3method(recover_inertia,empca_ord)
 S3method(recover_inertia,mjca)
 S3method(recover_inertia,nipals)
@@ -86,6 +94,7 @@ S3method(recover_rows,CCA)
 S3method(recover_rows,SPC)
 S3method(recover_rows,ca)
 S3method(recover_rows,cancor)
+S3method(recover_rows,candisc)
 S3method(recover_rows,clpca)
 S3method(recover_rows,empca_ord)
 S3method(recover_rows,lpca)
@@ -94,7 +103,9 @@ S3method(recover_rows,mjca)
 S3method(recover_rows,nipals)
 S3method(recover_rows,nipals_ord)
 S3method(recover_supp_cols,cancor)
+S3method(recover_supp_cols,candisc)
 S3method(recover_supp_rows,cancor)
+S3method(recover_supp_rows,candisc)
 export(as_tbl_ord)
 export(convexLogisticPCA_ord)
 export(empca_ord)
