--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(as_tbl_ord,lsvd)
 S3method(as_tbl_ord,mjca)
 S3method(as_tbl_ord,nipals)
 S3method(as_tbl_ord,nipals_ord)
+S3method(as_tbl_ord,principal)
 S3method(recover_aug_cols,CCA)
 S3method(recover_aug_cols,SPC)
 S3method(recover_aug_cols,ca)
@@ -22,6 +23,7 @@ S3method(recover_aug_cols,lsvd)
 S3method(recover_aug_cols,mjca)
 S3method(recover_aug_cols,nipals)
 S3method(recover_aug_cols,nipals_ord)
+S3method(recover_aug_cols,principal)
 S3method(recover_aug_coord,CCA)
 S3method(recover_aug_coord,SPC)
 S3method(recover_aug_coord,ca)
@@ -33,6 +35,7 @@ S3method(recover_aug_coord,lsvd)
 S3method(recover_aug_coord,mjca)
 S3method(recover_aug_coord,nipals)
 S3method(recover_aug_coord,nipals_ord)
+S3method(recover_aug_coord,principal)
 S3method(recover_aug_rows,CCA)
 S3method(recover_aug_rows,SPC)
 S3method(recover_aug_rows,ca)
@@ -44,6 +47,7 @@ S3method(recover_aug_rows,lsvd)
 S3method(recover_aug_rows,mjca)
 S3method(recover_aug_rows,nipals)
 S3method(recover_aug_rows,nipals_ord)
+S3method(recover_aug_rows,principal)
 S3method(recover_cols,CCA)
 S3method(recover_cols,SPC)
 S3method(recover_cols,ca)
@@ -55,6 +59,7 @@ S3method(recover_cols,lsvd)
 S3method(recover_cols,mjca)
 S3method(recover_cols,nipals)
 S3method(recover_cols,nipals_ord)
+S3method(recover_cols,principal)
 S3method(recover_conference,CCA)
 S3method(recover_conference,SPC)
 S3method(recover_conference,ca)
@@ -63,6 +68,7 @@ S3method(recover_conference,empca_ord)
 S3method(recover_conference,mjca)
 S3method(recover_conference,nipals)
 S3method(recover_conference,nipals_ord)
+S3method(recover_conference,principal)
 S3method(recover_coord,CCA)
 S3method(recover_coord,SPC)
 S3method(recover_coord,ca)
@@ -74,6 +80,7 @@ S3method(recover_coord,lsvd)
 S3method(recover_coord,mjca)
 S3method(recover_coord,nipals)
 S3method(recover_coord,nipals_ord)
+S3method(recover_coord,principal)
 S3method(recover_inertia,CCA)
 S3method(recover_inertia,SPC)
 S3method(recover_inertia,ca)
@@ -82,6 +89,7 @@ S3method(recover_inertia,empca_ord)
 S3method(recover_inertia,mjca)
 S3method(recover_inertia,nipals)
 S3method(recover_inertia,nipals_ord)
+S3method(recover_inertia,principal)
 S3method(recover_rows,CCA)
 S3method(recover_rows,SPC)
 S3method(recover_rows,ca)
@@ -93,8 +101,10 @@ S3method(recover_rows,lsvd)
 S3method(recover_rows,mjca)
 S3method(recover_rows,nipals)
 S3method(recover_rows,nipals_ord)
+S3method(recover_rows,principal)
 S3method(recover_supp_cols,cancor)
 S3method(recover_supp_rows,cancor)
+S3method(recover_supp_rows,principal)
 export(as_tbl_ord)
 export(convexLogisticPCA_ord)
 export(empca_ord)
