--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(as_tbl_ord,ca)
 S3method(as_tbl_ord,cancor)
 S3method(as_tbl_ord,clpca)
 S3method(as_tbl_ord,empca_ord)
+S3method(as_tbl_ord,fa)
 S3method(as_tbl_ord,lpca)
 S3method(as_tbl_ord,lsvd)
 S3method(as_tbl_ord,mjca)
@@ -18,6 +19,7 @@ S3method(recover_aug_cols,ca)
 S3method(recover_aug_cols,cancor)
 S3method(recover_aug_cols,clpca)
 S3method(recover_aug_cols,empca_ord)
+S3method(recover_aug_cols,fa)
 S3method(recover_aug_cols,lpca)
 S3method(recover_aug_cols,lsvd)
 S3method(recover_aug_cols,mjca)
@@ -30,6 +32,7 @@ S3method(recover_aug_coord,ca)
 S3method(recover_aug_coord,cancor)
 S3method(recover_aug_coord,clpca)
 S3method(recover_aug_coord,empca_ord)
+S3method(recover_aug_coord,fa)
 S3method(recover_aug_coord,lpca)
 S3method(recover_aug_coord,lsvd)
 S3method(recover_aug_coord,mjca)
@@ -42,6 +45,7 @@ S3method(recover_aug_rows,ca)
 S3method(recover_aug_rows,cancor)
 S3method(recover_aug_rows,clpca)
 S3method(recover_aug_rows,empca_ord)
+S3method(recover_aug_rows,fa)
 S3method(recover_aug_rows,lpca)
 S3method(recover_aug_rows,lsvd)
 S3method(recover_aug_rows,mjca)
@@ -54,6 +58,7 @@ S3method(recover_cols,ca)
 S3method(recover_cols,cancor)
 S3method(recover_cols,clpca)
 S3method(recover_cols,empca_ord)
+S3method(recover_cols,fa)
 S3method(recover_cols,lpca)
 S3method(recover_cols,lsvd)
 S3method(recover_cols,mjca)
@@ -65,6 +70,7 @@ S3method(recover_conference,SPC)
 S3method(recover_conference,ca)
 S3method(recover_conference,cancor)
 S3method(recover_conference,empca_ord)
+S3method(recover_conference,fa)
 S3method(recover_conference,mjca)
 S3method(recover_conference,nipals)
 S3method(recover_conference,nipals_ord)
@@ -75,6 +81,7 @@ S3method(recover_coord,ca)
 S3method(recover_coord,cancor)
 S3method(recover_coord,clpca)
 S3method(recover_coord,empca_ord)
+S3method(recover_coord,fa)
 S3method(recover_coord,lpca)
 S3method(recover_coord,lsvd)
 S3method(recover_coord,mjca)
@@ -86,6 +93,7 @@ S3method(recover_inertia,SPC)
 S3method(recover_inertia,ca)
 S3method(recover_inertia,cancor)
 S3method(recover_inertia,empca_ord)
+S3method(recover_inertia,fa)
 S3method(recover_inertia,mjca)
 S3method(recover_inertia,nipals)
 S3method(recover_inertia,nipals_ord)
@@ -96,6 +104,7 @@ S3method(recover_rows,ca)
 S3method(recover_rows,cancor)
 S3method(recover_rows,clpca)
 S3method(recover_rows,empca_ord)
+S3method(recover_rows,fa)
 S3method(recover_rows,lpca)
 S3method(recover_rows,lsvd)
 S3method(recover_rows,mjca)
@@ -103,7 +112,9 @@ S3method(recover_rows,nipals)
 S3method(recover_rows,nipals_ord)
 S3method(recover_rows,principal)
 S3method(recover_supp_cols,cancor)
+S3method(recover_supp_cols,fa)
 S3method(recover_supp_rows,cancor)
+S3method(recover_supp_rows,fa)
 S3method(recover_supp_rows,principal)
 export(as_tbl_ord)
 export(convexLogisticPCA_ord)
