--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Suggests:
     cooccur,
     knitr,
     psych,
-    rmarkdown
+    rmarkdown,
+    GPArotation
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
